2.0
---
* add PRP source endpoints
* improves performance
* bug fixes
* server start as unprivileged user
* upgrade to python 3.7
* dependencies upgrade
* new attachments/attachment endpoint


1.26
----
* fixes Intervention  endpoint


1.25
----
* restored `related_module_class` in ActionPoint
* fixes `partner_id` in Intervention


1.24
----
* improves Admin functionalities
* updates FundsReservation endpoints
* fixes FundsReservation ETL
* updates EtlTask management
* add ability to fully reset data



1.23
----
* Compatible with eTools 7.2
* new FundReservation&Header endpoint
* new Grant endpoint
* new InterventionIndicators endpoint
* new HACT History endpoint
* new HACT aggregate endpoint
* new Engagements endpoint
* new Trips endpoint
* new InterventionBudget endpoint
* updated InterventionByLocation endpoint
* updated Intervention endpoint
* updated TPMActivity endpoint
* updated Partner endpoint
* new v2 intervention serializer
* new PartnerContact endpoint
* new PartnerAgreement endpoint
* new ActionPoint endpoint
* new Workspaces endpoint


1.22
----
* Compatible with eTools 6.10
* New endpoint datamart/actionpoints/
* New endpoint datamart/interventions-locations/
* New endpoint datamart/users/
* New endpoint datamart/users-offices/
* New endpoint datamart/reports/sections/
* New endpoint datamart/partners/contacts/
* New endpoint datamart/partners/agreements/
* Updates datamart/travel-activities
* Updates datamart/travel-activities: add result_* fields
* Updates InterventionSerializerFull: add locations, offices, sections, partner_id and partner_source_id
* fixes Intervention serializers
* fixes formats popup menu
* new LocationMixin
* fixes Partner.hact_values handling
* ActionPoint - new serializer (v2)
* Fixes PDIndicator


1.21
----
* == Not released ==


1.20
----
* fixes FundsReservationLoader
* fixes FAMIndicatorLoader month handling
* fixes HACTLoader
* enable ETLLog reset
* add ability


1.19
----
* add Partner endpoint