@@ -7,6 +7,7 @@
 * upgrade to python 3.7
 * dependencies upgrade
 * new attachments/attachment endpoint
+* fixes Internet Explorer Content-Disposition issue that prevent file downloading
 
 
 1.26
